# CLibNGPluginTemplate

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  project_setup.py  update_baselines.py  vcpkg-configuration.json  vcpkg.json
.github/: update_vcpkg_baselines.py
.github/workflows/: clang-format.yml  test_build.yml  testbuild.yml
cmake/: FindOpenVR.cmake
cmake/ports/openvr/: portfile.cmake  vcpkg.json
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml
include/: Config.h  Events.h  Hooks.h  Logging.h  PCH.h  Settings.h  Utility.h
src/: Config.cpp  Events.cpp  Hooks.cpp  Logging.cpp  Main.cpp  Settings.cpp
